# ollamanager

./: .gitignore  AGENTS.md  GEMINI.md  README.md  design-feedback.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
design-prototypes/: 01-workspace-main-dark.html  02-disconnected-light.html  03-disconnected-dark.html  04-operations-dark.html  05-workspace-revised.html  06-workspace-reviewed.html  07-workspace-revised-v2.html  08-workspace-from-05.html  index.html
project-files/: ollama-capability-matrix.md  ux-plan.md
src/: App.test.tsx  App.tsx  README.md  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ToastRegion.test.tsx  ToastRegion.tsx
src/features/activity/: ActivityLog.tsx
src/features/connections/: ConnectionsPanel.test.tsx  ConnectionsPanel.tsx
src/features/models/: DeleteModelDialog.tsx  ModelDetailsModal.test.tsx  ModelDetailsModal.tsx  ModelListTable.tsx  ModelsPanel.test.tsx  ModelsPanel.tsx  PullModelForm.tsx  index.ts
src/lib/api/: endpoints.ts  errors.ts  mappers.ts  normalize.test.ts  normalize.ts  ollamaClient.ts
src/lib/format/: formatters.test.ts  formatters.ts
src/lib/persistence/: connectionsPersistence.ts
src/lib/validation/: connectionSchema.test.ts  connectionSchema.ts
src/store/: useConnectionsStore.ts
src/types/: connections.ts
